Add handler for update_switch
