# models/error_response.go
@@ -1,3 +1,5 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
 package models
 
 // This file was generated by the swagger tool.
@@ -13,6 +15,7 @@ import (
 
 // ErrorResponse error response
 // swagger:model ErrorResponse
+
 type ErrorResponse struct {
 
 	// errors
@@ -22,6 +25,10 @@ type ErrorResponse struct {
 	// Required: true
 	Message *string `json:"message"`
 }
+
+/* polymorph ErrorResponse errors false */
+
+/* polymorph ErrorResponse message false */
 
 // Validate validates this error response
 func (m *ErrorResponse) Validate(formats strfmt.Registry) error {
