# models/update_switch.go
@@ -1,0 +1,148 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// UpdateSwitch update switch
+// swagger:model UpdateSwitch
+
+type UpdateSwitch struct {
+
+	// image URL
+	// Required: true
+	ImageURL *string `json:"imageURL"`
+
+	// ip
+	// Required: true
+	IP *string `json:"ip"`
+
+	// password
+	// Required: true
+	Password *string `json:"password"`
+
+	// switch type
+	// Required: true
+	SwitchType *string `json:"switchType"`
+
+	// username
+	// Required: true
+	Username *string `json:"username"`
+}
+
+/* polymorph UpdateSwitch imageURL false */
+
+/* polymorph UpdateSwitch ip false */
+
+/* polymorph UpdateSwitch password false */
+
+/* polymorph UpdateSwitch switchType false */
+
+/* polymorph UpdateSwitch username false */
+
+// Validate validates this update switch
+func (m *UpdateSwitch) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateImageURL(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validateIP(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validatePassword(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validateSwitchType(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if err := m.validateUsername(formats); err != nil {
+		// prop
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *UpdateSwitch) validateImageURL(formats strfmt.Registry) error {
+
+	if err := validate.Required("imageURL", "body", m.ImageURL); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *UpdateSwitch) validateIP(formats strfmt.Registry) error {
+
+	if err := validate.Required("ip", "body", m.IP); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *UpdateSwitch) validatePassword(formats strfmt.Registry) error {
+
+	if err := validate.Required("password", "body", m.Password); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *UpdateSwitch) validateSwitchType(formats strfmt.Registry) error {
+
+	if err := validate.Required("switchType", "body", m.SwitchType); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *UpdateSwitch) validateUsername(formats strfmt.Registry) error {
+
+	if err := validate.Required("username", "body", m.Username); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *UpdateSwitch) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *UpdateSwitch) UnmarshalBinary(b []byte) error {
+	var res UpdateSwitch
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
