# restapi/configure_on_network.go
@@ -1,3 +1,5 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
 package restapi
 
 import (
@@ -10,9 +12,11 @@ import (
 	graceful "github.com/tylerb/graceful"
 
 	"github.com/RackHD/on-network/restapi/operations"
-	opAPI "github.com/RackHD/on-network/restapi/operations/api"
+	"github.com/RackHD/on-network/restapi/operations/about"
+	"github.com/RackHD/on-network/restapi/operations/update_switch"
 
-	"github.com/RackHD/on-network/controllers/about"
+	aboutctrl "github.com/RackHD/on-network/controllers/about"
+ 	updateswitchctrl "github.com/RackHD/on-network/controllers/update_switch"
 )
 
 // This file is safe to edit. Once it exists it will not be overwritten
@@ -31,7 +35,7 @@ func configureAPI(api *operations.OnNetworkAPI) http.Handler {
 	// Expected interface func(string, ...interface{})
 	//
 	// Example:
-	// s.api.Logger = log.Printf
+	// api.Logger = log.Printf
 
 	api.JSONConsumer = runtime.JSONConsumer()
 
@@ -40,11 +44,19 @@ func configureAPI(api *operations.OnNetworkAPI) http.Handler {
 	// Applies when the "authorization" header is set
 	api.APIKeyHeaderAuth = func(token string) (interface{}, error) {
 		return token, nil
-		//return nil, errors.NotImplemented("api key auth (APIKeyHeader) authorization from header param [authorization] has not yet been implemented")
 	}
 
-	api.APIAboutGetHandler = opAPI.AboutGetHandlerFunc(func(params opAPI.AboutGetParams, principal interface{}) middleware.Responder {
-		return about.MiddleWare(params.HTTPRequest)
+	// Set your custom authorizer if needed. Default one is security.Authorized()
+	// Expected interface runtime.Authorizer
+	//
+	// Example:
+	// api.APIAuthorizer = security.Authorized()
+
+	api.AboutAboutGetHandler = about.AboutGetHandlerFunc(func(params about.AboutGetParams, principal interface{}) middleware.Responder {
+		return aboutctrl.MiddleWare(params.HTTPRequest)
+	})
+	api.UpdateSwitchUpdateSwitchHandler = update_switch.UpdateSwitchHandlerFunc(func(params update_switch.UpdateSwitchParams, principal interface{}) middleware.Responder {
+		return updateswitchctrl.MiddleWare(params.HTTPRequest)
 	})
 
 	api.ServerShutdown = func() {}
@@ -73,9 +85,5 @@ func setupMiddlewares(handler http.Handler) http.Handler {
 // The middleware configuration happens before anything, this middleware also applies to serving the swagger.json document.
 // So this is a good place to plug in a panic handling middleware, logging and metrics
 func setupGlobalMiddleware(handler http.Handler) http.Handler {
-	return redocMiddleware(handler)
-}
-
-func redocMiddleware(handler http.Handler) http.Handler {
-	return middleware.Redoc(middleware.RedocOpts{}, handler)
+	return handler
 }
