# restapi/operations/on_network_api.go
@@ -1,3 +1,5 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
 package operations
 
 // This file was generated by the swagger tool.
@@ -17,7 +19,8 @@ import (
 	strfmt "github.com/go-openapi/strfmt"
 	"github.com/go-openapi/swag"
 
-	"github.com/RackHD/on-network/restapi/operations/api"
+	"github.com/RackHD/on-network/restapi/operations/about"
+	"github.com/RackHD/on-network/restapi/operations/update_switch"
 )
 
 // NewOnNetworkAPI creates a new OnNetwork instance
@@ -35,8 +38,11 @@ func NewOnNetworkAPI(spec *loads.Document) *OnNetworkAPI {
 		BearerAuthenticator: security.BearerAuth,
 		JSONConsumer:        runtime.JSONConsumer(),
 		JSONProducer:        runtime.JSONProducer(),
-		APIAboutGetHandler: api.AboutGetHandlerFunc(func(params api.AboutGetParams, principal interface{}) middleware.Responder {
-			return middleware.NotImplemented("operation APIAboutGet has not yet been implemented")
+		AboutAboutGetHandler: about.AboutGetHandlerFunc(func(params about.AboutGetParams, principal interface{}) middleware.Responder {
+			return middleware.NotImplemented("operation AboutAboutGet has not yet been implemented")
+		}),
+		UpdateSwitchUpdateSwitchHandler: update_switch.UpdateSwitchHandlerFunc(func(params update_switch.UpdateSwitchParams, principal interface{}) middleware.Responder {
+			return middleware.NotImplemented("operation UpdateSwitchUpdateSwitch has not yet been implemented")
 		}),
 
 		// Applies when the "authorization" header is set
@@ -44,6 +50,7 @@ func NewOnNetworkAPI(spec *loads.Document) *OnNetworkAPI {
 			return nil, errors.NotImplemented("api key auth (APIKeyHeader) authorization from header param [authorization] has not yet been implemented")
 		},
 	}
+
 }
 
 type OnNetworkAutorizer struct {
@@ -83,8 +90,13 @@ type OnNetworkAPI struct {
 	// it performs authentication based on an api key authorization provided in the header
 	APIKeyHeaderAuth func(string) (interface{}, error)
 
-	// APIAboutGetHandler sets the operation handler for the about get operation
-	APIAboutGetHandler api.AboutGetHandler
+	// APIAuthorizer provides access control (ACL/RBAC/ABAC) by providing access to the request and authenticated principal
+	APIAuthorizer runtime.Authorizer
+
+	// AboutAboutGetHandler sets the operation handler for the about get operation
+	AboutAboutGetHandler about.AboutGetHandler
+	// UpdateSwitchUpdateSwitchHandler sets the operation handler for the update switch operation
+	UpdateSwitchUpdateSwitchHandler update_switch.UpdateSwitchHandler
 
 	// ServeError is called when an error is received, there is a default handler
 	// but you can set your own with this
@@ -99,12 +111,7 @@ type OnNetworkAPI struct {
 
 	// User defined logger function.
 	Logger func(string, ...interface{})
-
 }
-func (o *OnNetworkAPI) Authorizer() runtime.Authorizer{
-	return &OnNetworkAutorizer{}
-}
-
 
 // SetDefaultProduces sets the default produces media type
 func (o *OnNetworkAPI) SetDefaultProduces(mediaType string) {
@@ -157,8 +164,12 @@ func (o *OnNetworkAPI) Validate() error {
 		unregistered = append(unregistered, "AuthorizationAuth")
 	}
 
-	if o.APIAboutGetHandler == nil {
-		unregistered = append(unregistered, "api.AboutGetHandler")
+	if o.AboutAboutGetHandler == nil {
+		unregistered = append(unregistered, "about.AboutGetHandler")
+	}
+
+	if o.UpdateSwitchUpdateSwitchHandler == nil {
+		unregistered = append(unregistered, "update_switch.UpdateSwitchHandler")
 	}
 
 	if len(unregistered) > 0 {
@@ -187,6 +198,13 @@ func (o *OnNetworkAPI) AuthenticatorsFor(schemes map[string]spec.SecurityScheme)
 		}
 	}
 	return result
+
+}
+
+// Authorizer returns the registered authorizer
+func (o *OnNetworkAPI) Authorizer() runtime.Authorizer {
+
+	return o.APIAuthorizer
 
 }
 
@@ -257,7 +275,12 @@ func (o *OnNetworkAPI) initHandlerCache() {
 	if o.handlers["GET"] == nil {
 		o.handlers["GET"] = make(map[string]http.Handler)
 	}
-	o.handlers["GET"]["/about"] = api.NewAboutGet(o.context, o.APIAboutGetHandler)
+	o.handlers["GET"]["/about"] = about.NewAboutGet(o.context, o.AboutAboutGetHandler)
+
+	if o.handlers["POST"] == nil {
+		o.handlers["POST"] = make(map[string]http.Handler)
+	}
+	o.handlers["POST"]["/updateSwitch"] = update_switch.NewUpdateSwitch(o.context, o.UpdateSwitchUpdateSwitchHandler)
 
 }
 
