# swagger.yaml
@@ -32,6 +32,24 @@ definitions:
         type: string
     required:
     - name
+  UpdateSwitch:
+      required:
+      - ip
+      - username
+      - password
+      - imageURL
+      - switchType
+      properties:
+        ip:
+          type: string
+        username:
+          type: string
+        password:
+          type: string
+        imageURL:
+          type: string
+        switchType:
+          type: string
 
 securityDefinitions:
   APIKeyHeader:
@@ -58,4 +76,33 @@ paths:
             $ref: '#/definitions/ErrorResponse'
       summary: Get about
       tags:
-        - /api
+        - /about
+
+  /updateSwitch:
+    post:
+      description: Update switch firmware based on specified switch type and firmware image
+      operationId: updateSwitch
+      parameters:
+        - name: body
+          in: body
+          schema:
+            $ref: "#/definitions/UpdateSwitch"
+      responses:
+        201:
+          description: Successfully issued update switch firmware
+        default:
+          description: Error
+          schema:
+            $ref: '#/definitions/ErrorResponse'
+      summary: Update switch firmware
+      tags:
+        - /updateSwitch
+
+#        description: Optional description in *Markdown*
+#        required: true
+#        content:
+#          application/json:
+#            schema:
+#              $ref: '#/definitions/About'
+#
+
